k8s/resource-manager-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-hadoop-hive-spark.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/bigdata: "true"
    io.kompose.service: resource-manager
  name: resource-manager
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - akswnc4.aksw.uni-leipzig.de
  containers:
    - env:
        - name: CORE_CONF_fs_defaultFS
          valueFrom:
            configMapKeyRef:
              key: CORE_CONF_fs_defaultFS
              name: hadoop-env
        - name: CORE_CONF_hadoop_http_staticuser_user
          valueFrom:
            configMapKeyRef:
              key: CORE_CONF_hadoop_http_staticuser_user
              name: hadoop-env
        - name: CORE_CONF_hadoop_proxyuser_hue_groups
          valueFrom:
            configMapKeyRef:
              key: CORE_CONF_hadoop_proxyuser_hue_groups
              name: hadoop-env
        - name: CORE_CONF_hadoop_proxyuser_hue_hosts
          valueFrom:
            configMapKeyRef:
              key: CORE_CONF_hadoop_proxyuser_hue_hosts
              name: hadoop-env
        - name: CORE_CONF_io_compression_codecs
          valueFrom:
            configMapKeyRef:
              key: CORE_CONF_io_compression_codecs
              name: hadoop-env
        - name: HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check
          valueFrom:
            configMapKeyRef:
              key: HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check
              name: hadoop-env
        - name: HDFS_CONF_dfs_permissions_enabled
          valueFrom:
            configMapKeyRef:
              key: HDFS_CONF_dfs_permissions_enabled
              name: hadoop-env
        - name: HDFS_CONF_dfs_webhdfs_enabled
          valueFrom:
            configMapKeyRef:
              key: HDFS_CONF_dfs_webhdfs_enabled
              name: hadoop-env
        - name: HIVE_SITE_CONF_datanucleus_autoCreateSchema
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_datanucleus_autoCreateSchema
              name: hadoop-env
        - name: HIVE_SITE_CONF_hive_metastore_uris
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_hive_metastore_uris
              name: hadoop-env
        - name: HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName
              name: hadoop-env
        - name: HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword
              name: hadoop-env
        - name: HIVE_SITE_CONF_javax_jdo_option_ConnectionURL
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_javax_jdo_option_ConnectionURL
              name: hadoop-env
        - name: HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName
          valueFrom:
            configMapKeyRef:
              key: HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName
              name: hadoop-env
        - name: MAPRED_CONF_mapred_child_java_opts
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapred_child_java_opts
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_framework_name
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_framework_name
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_map_env
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_map_env
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_map_java_opts
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_map_java_opts
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_map_memory_mb
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_map_memory_mb
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_reduce_env
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_reduce_env
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_reduce_java_opts
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_reduce_java_opts
              name: hadoop-env
        - name: MAPRED_CONF_mapreduce_reduce_memory_mb
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_mapreduce_reduce_memory_mb
              name: hadoop-env
        - name: MAPRED_CONF_yarn_app_mapreduce_am_env
          valueFrom:
            configMapKeyRef:
              key: MAPRED_CONF_yarn_app_mapreduce_am_env
              name: hadoop-env
        - name: SERVICE_PRECONDITION
          value: name-node:50070 data-node:50075
        - name: YARN_CONF_mapred_map_output_compress_codec
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_mapred_map_output_compress_codec
              name: hadoop-env
        - name: YARN_CONF_mapreduce_map_output_compress
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_mapreduce_map_output_compress
              name: hadoop-env
        - name: YARN_CONF_yarn_log___aggregation___enable
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_log___aggregation___enable
              name: hadoop-env
        - name: YARN_CONF_yarn_log_server_url
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_log_server_url
              name: hadoop-env
        - name: YARN_CONF_yarn_nodemanager_aux___services
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_nodemanager_aux___services
              name: hadoop-env
        - name: YARN_CONF_yarn_nodemanager_disk___health___checker_max___disk___utilization___per___disk___percentage
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_nodemanager_disk___health___checker_max___disk___utilization___per___disk___percentage
              name: hadoop-env
        - name: YARN_CONF_yarn_nodemanager_remote___app___log___dir
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_nodemanager_remote___app___log___dir
              name: hadoop-env
        - name: YARN_CONF_yarn_nodemanager_resource_cpu___vcores
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_nodemanager_resource_cpu___vcores
              name: hadoop-env
        - name: YARN_CONF_yarn_nodemanager_resource_memory___mb
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_nodemanager_resource_memory___mb
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_address
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_address
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_fs_state___store_uri
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_fs_state___store_uri
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_hostname
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_hostname
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_recovery_enabled
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_recovery_enabled
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_resource__tracker_address
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_resource__tracker_address
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_scheduler_address
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_scheduler_address
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_scheduler_class
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_scheduler_class
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_store_class
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_store_class
              name: hadoop-env
        - name: YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled
              name: hadoop-env
        - name: YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb
              name: hadoop-env
        - name: YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores
              name: hadoop-env
        - name: YARN_CONF_yarn_timeline___service_enabled
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_timeline___service_enabled
              name: hadoop-env
        - name: YARN_CONF_yarn_timeline___service_generic___application___history_enabled
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_timeline___service_generic___application___history_enabled
              name: hadoop-env
        - name: YARN_CONF_yarn_timeline___service_hostname
          valueFrom:
            configMapKeyRef:
              key: YARN_CONF_yarn_timeline___service_hostname
              name: hadoop-env
      image: vincentzczhang/resource-manager:hadoop-2.5.2
      name: resource-manager
      resources: {}
  restartPolicy: OnFailure
status: {}
