k8s/hive-metastore-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-hadoop-hive-spark.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hive-metastore
  name: hive-metastore
spec:
  ports:
    - name: "9083"
      port: 9083
      targetPort: 9083
  selector:
    io.kompose.service: hive-metastore
status:
  loadBalancer: {}
