k8s/hive-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-hadoop-hive-spark.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: hive-server
  name: hive-server
spec:
  ports:
    - name: "10000"
      port: 10000
      targetPort: 10000
  selector:
    io.kompose.service: hive-server
status:
  loadBalancer: {}
