k8s/spark-history-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-hadoop-hive-spark.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-history-server
  name: spark-history-server
spec:
  ports:
    - name: "18081"
      port: 18081
      targetPort: 18081
  selector:
    io.kompose.service: spark-history-server
status:
  loadBalancer: {}
