k8s/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-hadoop-hive-spark.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "7077"
      port: 7077
      targetPort: 7077
    - name: "6066"
      port: 6066
      targetPort: 6066
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
