k8s/bigdata-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bigdata
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/bigdata: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bigdata: "true"
